# SkyPilot

./: CMakeLists.txt  README.md  fsd_bridge.py  mumble_client.py  ptt.py  radio_core.py  requirements.txt  setup.cfg  simconnect_bridge.py  skypilot.py  vcpkg.json
.github/workflows/: build.yml
audio/: __init__.py  mumble_radio.py  ptt.py
docs/: ARCHITECTURE.md  building.md
installer/windows/: skyhigh-pilot.nsi
models/: rules.json
network/: __init__.py  fsd_client.py
resources/: qml.qrc
sim/: __init__.py  aircraft_state.py  simconnect_bridge.py
src/: main.cpp
src/app/: Application.cpp  Application.h  Config.h
src/core/SimConnector/: ISimConnector.h  MsfsConnector.cpp  MsfsConnector.h  XPlaneConnector.cpp  XPlaneConnector.h
src/core/fsd/: FsdClient.cpp  FsdClient.h  FsdPackets.cpp  FsdPackets.h  FsdParser.cpp  FsdParser.h  FsdProtocol.cpp  FsdProtocol.h
src/core/messages/: MessageManager.cpp  MessageManager.h
src/core/models/: AircraftModelSet.cpp  AircraftModelSet.h  ModelMatcher.cpp  ModelMatcher.h
src/core/network/: ConnectionManager.cpp  ConnectionManager.h
src/core/pilot/: FlightPlan.cpp  FlightPlan.h  PilotSession.cpp  PilotSession.h
src/core/traffic/: TrafficManager.cpp  TrafficManager.h
src/core/voice/: AudioManager.cpp  AudioManager.h  MumbleClient.cpp  MumbleClient.h
src/ui/: MainWindow.cpp  MainWindow.h
src/ui/qml/: Main.qml  TrafficMap.qml
src/ui/viewmodels/: ConnectionViewModel.cpp  ConnectionViewModel.h
src/utils/: CoordUtils.cpp  CoordUtils.h  Logger.h
tests/: CMakeLists.txt  test_fsd_parser.cpp  test_fsd_protocol.cpp
ui/: main_window.py
