[metadata]
name = skypilot
version = 0.2.0
description = SkyPilot — SkyHigh Network pilot client
author = SkyHigh Network
license = MIT

[options]
packages = find:
python_requires = >=3.10
install_requires =
    PySide6>=6.7.0
    SimConnect>=0.4.3
    pymumble_py3>=1.6
    keyboard>=0.13.5

[options.entry_points]
console_scripts =
    skypilot = skypilot:main
