[metadata]
name = skypilot
version = 0.1.0
description = SkyHigh pilot client development build
license = MIT

[options]
packages = find:
python_requires = >=3.10
install_requires =
    PySide6>=6.7
    pymumble_py3>=1.0.0
    pygame>=2.5

[options.packages.find]
include =
    sim
    network
    audio
    ui
